# hive-zero

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  analyze_games.py  fetch_games.py  index.html  main.py  parse_sgf.py  process_games.py  pyproject.toml  requirements.txt  runs.md  uv.toml  zertz_b6_c64.onnx  zertz_b6_c64.onnx.data  zertz_b6_c64_new_cap_pol_2.onnx  zertz_b6_c64_new_cap_pol_2.onnx.data
configs/hive/: large.json  medium-attn.json  medium.json  small.json
docs/: GNN.md  IDEAS.md  ZERTZ_RULES.md  hive_attention.md  hive_ideas.md  hive_model.md  ideas_zertz.md  mcts_value_convention.md  performance.md  policy_heads.md  rust_inference.md  yinsh_rules.md  zertz_model.md  zertz_web.md
games/: ANALYSIS.md
games/hive/boardspace/: game_stats.txt
games/yinsh/boardspace/: game_stats.txt
games/zertz/: game_stats.txt
hive/: cli.py  sgf.py  training_log.py
hive/core/: __init__.py  board.py  game.py  hex.py  pieces.py  render.py  rules.py
hive/encoding/: board_encoder.py  move_encoder.py  symmetry.py
hive/eval/: engine_match.py
hive/mcts/: __init__.py  mcts.py
hive/nn/: model.py  training.py
hive/selfplay/: __main__.py  battle.py  rust_selfplay.py  selfplay.py
hive/supervised/: pretrain.py
hive/uhp/: __init__.py  engine.py
pkg/: package.json  zertz_wasm.d.ts  zertz_wasm.js  zertz_wasm_bg.wasm  zertz_wasm_bg.wasm.d.ts
rust/: Cargo.toml
rust/crates/core-game/: Cargo.toml
rust/crates/core-game/src/: game.rs  hex.rs  lib.rs  sgf.rs  symmetry.rs
rust/crates/core-game/src/mcts/: arena.rs  mod.rs  node.rs  search.rs
rust/crates/engine-zero/: Cargo.toml
rust/crates/engine-zero/src/: hive_python.rs  hive_selfplay.rs  inference.rs  lib.rs  python.rs  selfplay.rs  tictactoe_python.rs  yinsh_python.rs  zertz_core.rs  zertz_python.rs
rust/crates/hive-game/: Cargo.toml
rust/crates/hive-game/src/: board.rs  board_encoding.rs  game.rs  hex.rs  lib.rs  main.rs  mcts_tests.rs  move_encoding.rs  piece.rs  replay.rs  rules.rs  search.rs  sgf.rs  uhp.rs
rust/crates/tictactoe-game/: Cargo.toml
rust/crates/tictactoe-game/src/: game.rs  lib.rs  mcts_tests.rs
rust/crates/yinsh-game/: Cargo.toml
rust/crates/yinsh-game/src/: board.rs  board_encoding.rs  hex.rs  lib.rs  main.rs  move_encoding.rs  notation.rs  random_play.rs  replay.rs  search.rs  sgf.rs
rust/crates/zertz-game/: Cargo.toml  RULES.md
rust/crates/zertz-game/src/: board_encoding.rs  hex.rs  lib.rs  main.rs  move_encoding.rs  notation.rs  parser.rs  random_play.rs  replay.rs  search.rs  sgf.rs  zertz.rs
rust/crates/zertz-game/src/mcts/: arena.rs  node.rs  search.rs
rust/crates/zertz-wasm/: Cargo.toml
rust/crates/zertz-wasm/src/: lib.rs
rust/crates/zertz-wasm/web/: index.html
rust/src/: board.rs  board_encoding.rs  game.rs  hex.rs  lib.rs  main.rs  move_encoding.rs  piece.rs  python.rs  replay.rs  rules.rs  selfplay.rs  sgf.rs  uhp.rs
rust/src/mcts/: arena.rs  node.rs  search.rs
scripts/: expand_blocks.py  export_onnx.py  fetch_games.py  inspect_checkpoint.py  parse_sgf.py  plot_log.py  process_games.py  widen_channels.py
shared/: lr_scheduler.py  replay_buffer.py  training_log.py
shared/nn/: attention.py  gpba.py  resblock.py
tests/: test_core.py  test_lr_scheduler.py  test_rust_parity.py  test_symmetry.py  test_yinsh_pipeline.py  test_zertz_symmetry.py
tictactoe/: cli.py  play.py  solve_check.py  sweep.py
tictactoe/nn/: model.py  training.py
tictactoe/selfplay/: selfplay.py
yinsh/: __init__.py  cli.py
yinsh/nn/: model.py  training.py
yinsh/selfplay/: battle.py  selfplay.py
zertz/: cli.py  play.py
zertz/nn/: model.py  training.py
zertz/selfplay/: battle.py  selfplay.py
