[workspace]
resolver = "2"
members = [
    "rust/crates/core-game",
    "rust/crates/hive-game",
    "rust/crates/engine-zero",
    "rust/crates/zertz-game",
    "rust/crates/tictactoe-game",
]

[workspace.dependencies]
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
