[workspace]
resolver = "2"
members = [
    "rust/crates/core-game",
    "rust/crates/hive-game",
    "rust/crates/engine-zero",
    "rust/crates/zertz-game",
    "rust/crates/tictactoe-game",
    "rust/crates/yinsh-game",
    # zertz-wasm is intentionally excluded: WASM crates are built separately with
    # wasm-pack and must not share the workspace feature graph (engine-zero enables
    # the "replay" feature on zertz-game which pulls in C libs incompatible with wasm32).
    # Build with: wasm-pack build rust/crates/zertz-wasm --target web
]

[workspace.dependencies]
rand = "0.10"
rand_distr = "0.6"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
