[project]
name = "hive-zero"
version = "0.1.0"
description = "Hive AI engine with AlphaZero-style MCTS"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "colorama>=0.4.6",
    "mplcursors>=0.7.1",
]

[project.scripts]
hive = "hive.cli:main"
zertz = "zertz.cli:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/crates/engine-zero/Cargo.toml"
module-name = "hive_engine"
python-packages = ["hive", "zertz", "shared"]
