[project]
name = "hive-zero"
version = "0.1.0"
description = "Hive AI engine with AlphaZero-style MCTS"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "colorama>=0.4.6",
    "mplcursors>=0.7.1",
    "onnxscript>=0.6.2",
    "onnxruntime>=1.24.4",
    "tqdm",
    # torch must be installed manually — no ARM64 Windows wheels on PyPI.
    # See CLAUDE.md for install instructions.
]

[project.optional-dependencies]
ort-gpu = ["onnxruntime-gpu>=1.24.4"]
ort-qnn = ["onnxruntime-qnn"]

[project.scripts]
hive = "hive.cli:main"
zertz = "zertz.cli:main"
tictactoe = "tictactoe.cli:main"
yinsh = "yinsh.cli:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/crates/engine-zero/Cargo.toml"
module-name = "engine_zero"
python-packages = ["hive", "zertz", "tictactoe", "yinsh", "shared"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "rust/**/*.toml" }, { file = "rust/**/*.rs" }]
