[package]
name = "engine-zero"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine_zero"
crate-type = ["cdylib", "rlib"]

[dependencies]
core-game = { path = "../core-game" }
hive-game = { path = "../hive-game" }
zertz-game = { path = "../zertz-game" }
tictactoe-game = { path = "../tictactoe-game" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rand = { workspace = true }
rayon = "1.10"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "cuda", "qnn", "api-22"] }
