[package]
name = "yinsh-game"
version = "0.1.0"
edition = "2024"

[features]
default = ["replay"]
replay = ["dep:zip", "core-game/zip-sgf"]

[dependencies]
core-game = { path = "../core-game", default-features = false }
rand = { workspace = true }
rand_distr = { workspace = true }
zip = { version = "2", optional = true }
clap = { workspace = true }

[lib]
name = "yinsh_game"
path = "src/lib.rs"

[[bin]]
name = "yinsh-tools"
path = "src/main.rs"
required-features = ["replay"]
