[workspace]

[package]
name = "zertz-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
zertz-game = { path = "../zertz-game", default-features = false }
core-game = { path = "../core-game", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
rand = "0.10"
# Enable wasm_js on both getrandom versions in the dep tree:
#   0.3 is pulled in by rand_distr 0.6; 0.4 is pulled in by rand 0.10.
# Package-rename lets us declare both in [dependencies].
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_v4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
